<resources>
    <!--ResurseCenterValue-->
    <string name="app_name">Code</string>
    <string name="btn_java_tv_value">Java</string>
    <string name="btn_android_tv_value">Android</string>
    <string name="btn_php_tv_value">PHP</string>
    <string name="btn_python_tv_value">Python</string>
    <string name="btn_javascript_tv_value">JavaScript</string>
    <string name="btn_c_tv_value">C</string>
    <string name="btn_angular_tv_value">Angular</string>
    <string name="btn_scala_tv_value">Scala</string>
    <string name="btn_http2_tv_value">Http2</string>

    <!--ToolBar-->
    <string name="toolbar_app">编程助手</string>
    <string name="toolbar_about">关于</string>

    <!--tab_titles-->
    <string-array name="title_main">
        <item>新鲜事</item>
        <item>学习库</item>
        <item>发现</item>
    </string-array>

</resources>
